# gean

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEVNET2_IMPLEMENTATION_PLAN.md  Dockerfile  LICENSE  MEMORY_LEAK_ANALYSIS.md  Makefile  README.md  SECURITY.md  SUSTAINABILITY.md  config.yaml  devnet-4-port-plan.md  go.mod  go.sum  nodes.yaml  validators.yaml
.claude/skills/: README.md
.github/: pull_request_template.md
.github/workflows/: build-test.yml  docker-build.yml  lint-format.yml  pr-issue-check.yml  security-audit.yml  spec-tests.yml
api/: README.md  handlers_admin.go  handlers_admin_test.go  handlers_blocks_test.go  server.go  server_test.go  test_driver.go  test_driver_test.go
api/handlers/: checkpoints.go  fork_choice.go  health.go  states.go  util.go
api/httprest/: router.go  routes.go
api/server/: config.go  server.go
api/types/: types.go
chain/: genesis.go  transition.go
chain/forkchoice/: aggregated_payloads.go  aggregation.go  aggregation_backlog_test.go  aggregation_test.go  api_snapshot.go  attestation.go  block.go  ghost.go  gossip_guard_test.go  helpers.go  memory_retention_test.go  produce.go  prune.go  prune_test.go  restore_metadata.go  sig_verify.go  sig_verify_skip.go  signature_cache.go  store.go  store_test.go  time.go  verification_test.go
chain/statetransition/: bitlist.go  bitlist_test.go  genesis.go  justified_slots.go  process_attestations.go  process_attestations_test.go  proposer.go  transition.go
checkpoint/: checkpoint.go  checkpoint_test.go
clock/: clock.go
cmd/gean/: api_server.go  api_server_hive_testdriver.go  bootstrap.go  flags.go  flags_test.go  main.go  main_test.go  memory.go  memory_test.go  network.go  servers.go  shutdown.go  store.go
cmd/keygen/: generate.go  main.go  main_test.go  manifest.go  model.go  output.go
common/ssz/: ssz.go  ssz_test.go
common/types/: types.go  types_encoding.go  types_test.go
config/: genesis.go  genesis_config_test.go  genesis_test.go  nodes.go  validators.go
consensus/: errors.go  forkchoice.go  genesis.go  genesis_test.go  justification_test.go  justifications.go  store.go  transition.go  transition_test.go
consensus/transition/: attestations.go  block.go  copy.go  finalization.go  slots.go  transition_test.go
forkchoice/: duties.go  errors.go  forkchoice.go  forkchoice_test.go  lmdghost.go  lmdghost_test.go  producer.go  protoarray.go  spec.go  store.go  store_test.go  time.go  votes.go  votes_test.go
genesis/: config.go  genesis_test.go
internal/aggregation/: aggregate.go  aggregate_test.go  aggregation_pool.go  aggregation_test.go  mutation.go  mutation_test.go  pool.go  proofs.go  proofs_test.go  publish.go  snapshot.go  snapshot_test.go  worker.go  (+2 more)
leansig/: keystore_test.go
leansig-ffi/: Cargo.toml
logger/: logger.go
metrics/: counters.go  gauges.go  histograms.go  metrics.go  sync.go
network/: host.go
networking/: bootnodes.go  errors.go  handlers.go  host.go  lifecycle.go  publish.go  pubsub.go  service.go  subscriptions.go
node/: aggregation_pool.go  aggregator_controller.go  aggregator_controller_test.go  block.go  blocks_by_range_test.go  checkpoint_sync.go  checkpoint_sync_test.go  clock.go  connections.go  consensus_store.go  consensus_store_test.go  engine.go  engine_test.go  errors.go  handler.go  handlers.go  lifecycle.go  metrics.go  node.go  node_test.go  pending_attestations.go  pending_attestations_test.go  pending_blocks.go  pending_blocks_test.go  pending_replay_test.go  spectests_forkchoice_test.go  spectests_signatures_test.go  store_aggregate.go  store_block.go  store_block_bench_test.go  store_build.go  store_build_test.go  store_errors.go  store_gossip.go  store_payloads.go  store_produce.go  store_prune.go  store_snapshot.go  store_tick.go  store_validate.go  (+11 more)
p2p/: blocks_by_range_test.go  bootnode.go  config.go  encoding.go  enr.go  enr_test.go  gossip.go  gossipsub.go  gossipsub_test.go  handlers.go  host.go  messages.go  msgid.go  p2p_test.go  peers.go  publish.go  pubsub.go  reqresp.go  service.go  topics.go
specfixtures/: parse.go  types.go
spectests/: api_test.go  converters.go  fc_spectests_test.go  fixture.go  fixture_types.go  forkchoice_test.go  justifiability_test.go  networking_ssz_adapters_test.go  networking_test.go  signatures_test.go  slot_clock_test.go  ssz_test.go  stf_spectests_test.go  stf_test.go  sync_test.go  xmss_ssz_adapters_test.go
statetransition/: attestations.go  attestations_test.go  block.go  errors.go  hooks.go  justifiable.go  justifiable_test.go  slots.go  spectests_fixture.go  spectests_stf_test.go  transition.go  transition_test.go
storage/: interface.go  keys.go  memory.go  pebble.go  pebble_test.go  tables.go
types/: aggregated_attestation.go  aggregated_attestation_encoding.go  attestation.go  attestation_encoding.go  bitlist.go  bitlist_test.go  block.go  block_encoding.go  blocks_by_range.go  checkpoint.go  checkpoint_encoding.go  clock.go  clock_test.go  config.go  config_encoding.go  constants.go  containers.go  containers_encoding.go  encoding_gen.go  errors.go  generate.go  helpers.go  helpers_test.go  primitives.go  reqresp.go  reqresp_encoding.go  signed_aggregated_attestation.go  signed_aggregated_attestation_encoding.go  slot.go  ssz_compliance_test.go  ssz_test.go  state.go  state_encoding.go  types.go  types_encoding.go  types_test.go  validator.go  validator_encoding.go  vote.go  vote_encoding.go  (+1 more)
validator/: producer.go
xmss/: aggregate_test.go  block_roundtrip_test.go  ffi.go  ffi_test.go  keys.go  keys_test.go  multi_aggregate_test.go  proof_pool.go  pubkey_cache.go  pubkey_cache_test.go  roundtrip_test.go  type2_test.go
xmss/leanmultisig-ffi/: Cargo.toml  build.rs  cbindgen.toml
xmss/leanmultisig-ffi/include/: leanmultisig_ffi.h
xmss/leanmultisig-ffi/src/: lib.rs
xmss/rust/: Cargo.toml
xmss/rust/cgo-glue/: Cargo.toml
xmss/rust/cgo-glue/src/: lib.rs
xmss/rust/gean-glue/: Cargo.toml
xmss/rust/hashsig-glue/: Cargo.toml
xmss/rust/hashsig-glue/src/: lib.rs
xmss/rust/multisig-glue/: Cargo.toml
xmss/rust/multisig-glue/src/: lib.rs
(+421 files in other folders)
