[package]
name = "leanmultisig-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[lib]
name = "leanmultisig_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "e5b27c0456dfd011ef13fffa442a61d3ab2737c4" }
leansig = { git = "https://github.com/leanEthereum/leanSig", rev = "73bedc26ed961b110df7ac2e234dc11361a4bf25" }
ssz = { package = "ethereum_ssz", version = "0.10.0" }

[build-dependencies]
cbindgen = "0.29"

[patch."https://github.com/leanEthereum/leanMultisig.git"]
lookup = { path = "vendor/lookup" }
