[package]
name = "leanmultisig-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[lib]
name = "leanmultisig_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "e4474138487eeb1ed7c2e1013674fe80ac9f3165" }
leansig = { git = "https://github.com/leanEthereum/leanSig", rev = "73bedc26ed961b110df7ac2e234dc11361a4bf25" }
ssz = { package = "ethereum_ssz", version = "0.10.0" }

[build-dependencies]
cbindgen = "0.29"
