[workspace]
resolver = "2"
members = [
  "cgo-glue",
  "hashsig-glue",
  "multisig-glue",
]
default-members = ["cgo-glue"]

[profile.release]
lto = false
strip = "symbols"
codegen-units = 16

# Optimized profile used by `make ffi` / Dockerfile. Inherits release, enables
# thin LTO and a single codegen unit for whole-program optimization across the
# leanMultisig backend hot path. Matches zeam's `[profile.multisig-release]`
# which delivers ~300 ms committee aggregation vs gean's ~2 s on plain release.
#
# Keep opt-level at the inherited `3`. Do NOT switch to `opt-level = "z"` or
# `"s"` here: combined with `codegen-units = 1` they deterministically
# miscompile `xmss_aggregate` on x86_64 Linux (rustc >= 1.95), producing a
# General Protection Exception inside `prove_execution` →
# `eval_virtual_bus_column`'s inlined SIMD fold. Tracked at
# leanEthereum/leanMultisig#198 and blockblaz/zeam#734.
[profile.multisig-release]
inherits = "release"
lto = "thin"
codegen-units = 1
