[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
leansig = { git = "https://github.com/leanEthereum/leanSig", branch = "devnet4" }
rand = "0.10.0"
thiserror = "2.0.17"
ssz = { package = "ethereum_ssz", version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
test-config = []

[lib]
crate-type = ["staticlib"]
name = "hashsig_glue"
