[package]
name = "multisig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pinned to devnet4 f66d4a9. leanMultisig ships an experimental zk-alloc allocator,
# but it is opt-in (a consumer must install #[global_allocator] itself). We deliberately
# do NOT, so the staticlib stays on the system allocator — zk-alloc can corrupt memory.
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "f66d4a9" }
leansig_wrapper = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "f66d4a9" }
backend = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "f66d4a9" }

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be
# funnelled through the `cgo-glue` staticlib shim. See cgo-glue/Cargo.toml.
crate-type = ["rlib"]
name = "multisig_glue"
