[package]
name = "multisig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# Matches leanSpec fd7dfd0 through lean-multisig-py v0.0.6.
rec_aggregation = { git = "https://github.com/leanEthereum/leanVM.git", rev = "8fcbd77958a58666e828315de2d6ce7c93297117" }
leansig_wrapper = { git = "https://github.com/leanEthereum/leanVM.git", rev = "8fcbd77958a58666e828315de2d6ce7c93297117" }
backend = { git = "https://github.com/leanEthereum/leanVM.git", rev = "8fcbd77958a58666e828315de2d6ce7c93297117" }

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be
# funnelled through the `cgo-glue` staticlib shim. See cgo-glue/Cargo.toml.
crate-type = ["rlib"]
name = "multisig_glue"
